@@ -1,6 +1,6 @@
 /*
 
-Copyright (c) 2007, Arvid Norberg
+Copyright (c) 2010, Arvid Norberg
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
@@ -30,40 +30,33 @@ POSSIBILITY OF SUCH DAMAGE.
 
 */
 
-#ifndef TORRENT_ASSERT
+#ifndef SETTINGS_HPP_INCLUDED
+#define SETTINGS_HPP_INCLUDED
 
 #include "libtorrent/config.hpp"
+#include "libtorrent/session_settings.hpp"
 
-#if (!defined TORRENT_DEBUG && !TORRENT_PRODUCTION_ASSERTS) || TORRENT_NO_ASSERTS
-#define TORRENT_ASSERT(a) do {} while(false)
-#define TORRENT_ASSERT_VAL(a, b) do {} while(false)
-#else
+namespace libtorrent
+{
+	struct lazy_entry;
+	struct entry;
 
-#if TORRENT_PRODUCTION_ASSERTS
-extern char const* libtorrent_assert_log;
-#endif
+	enum { std_string = 0, character = 1, short_integer = 2
+		, integer = 3, floating_point = 4, boolean = 5};
 
-#include <string>
+	// this is used to map struct entries
+	// to names in a bencoded dictionary to
+	// save and load the struct
+	struct bencode_map_entry
+	{
+		char const* name;
+		int offset; // struct offset
+		int type;
+	};
 
-#ifdef __GNUC__
-std::string demangle(char const* name);
-#endif
-
-#if (defined __linux__ || defined __MACH__) && defined __GNUC__
-
-#include <sstream>
-
-TORRENT_EXPORT void assert_fail(const char* expr, int line, char const* file, char const* function, char const* val);
-#define TORRENT_ASSERT(x) do { if (x) {} else assert_fail(#x, __LINE__, __FILE__, __PRETTY_FUNCTION__, 0); } while (false)
-#define TORRENT_ASSERT_VAL(x, y) do { if (x) {} else { std::stringstream __s__; __s__ << #y ": " << y; assert_fail(#x, __LINE__, __FILE__, __PRETTY_FUNCTION__, __s__.str().c_str()); } } while (false)
-
-#else
-#include <cassert>
-#define TORRENT_ASSERT(x) assert(x)
-#define TORRENT_ASSERT_VAL(x, y) assert(x)
-#endif
-
-#endif
+	void load_struct(lazy_entry const& e, void* s, bencode_map_entry const* m, int num);
+	void save_struct(entry& e, void const* s, bencode_map_entry const* m, int num, void const* def = 0);
+}
 
 #endif
 
